Fix UI glicthes, align styles (#17)

--- a/src/Form/InputAddress/inputAddress.css
+++ b/src/Form/InputAddress/inputAddress.css
@@ -21,7 +21,7 @@
 
   [data-address-img] {
     position: absolute;
-    top: -7px;
+    bottom: 0;
     left: 8px;
   }
 }
@@ -52,11 +52,7 @@
 .icon,
 .iconDisabled {
   position: absolute;
-  top: 33px;
-
-  &.noLabel {
-    top: 10px;
-  }
+  bottom: 4px;
 
   &.noCopy {
     left: 5px;
